--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="HomePage.css">
+    <link rel="stylesheet" href="contact.css">
     <script src = "index.js"></script>
     <header>
         <h1>Edgy Engineers</h1>
     </header>
     <body>
         <div class="navbar">
-            <li><a class="active" href="EdgyEngineers.html">HOME</a></li>
-            <li><a class="" href="contact.html">CONTACT</a></li>
+            <li><a class="" href="EdgyEngineers.html">HOME</a></li>
+            <li><a class="active" href="contact.html">CONTACT</a></li>
             <li>
                 <div class="dropdown">
                     <button class="dropbtn">SHOP</button>
@@ -23,16 +23,16 @@
             <li class = "right"><a class="" href="login.html">LOGIN</a></li>
             <li class = "right"><a class="" href="cart.html">CART</a></li>
         </div>
-        <div id = "home-saying">
-            <p>Are you Edgy?</p>
-            <p>Are you an Engineer?</p>
-            <p>Do you have money?</p>
-            <p id = "ending">If you answered YES to all those questions, then you're in the right place!</p>
-            <p id="ye">COME SHOP OUR STORE TODAY!</p>
+        <div>
+            <h2>CONTACT US:</h2>
+            <h4>Phone: 123-123-123</h4>
+            <h4>Email: dontemailus@gmail.com</h4>
+            <h4>Location: Antartica</h4>
         </div>
         <div>
-            <img src="homePage.jpeg">
+            <img src="contactus.jpeg" alt="Contact Us">
         </div>
 
+        
     </body>
 </html>
