this is the correct add to cart stuff

--- a/EdgyEngineers.html
+++ b/EdgyEngineers.html
@@ -14,7 +14,7 @@
                 <div class="dropdown">
                     <button class="dropbtn">SHOP</button>
                         <div class="dropdown-content">
-                            <a href="clothes.html">Clothes</a>
+                            <a href="clothes.php">Clothes</a>
                             <a href="acessories.html">Acessories</a>
                             <a href="poster.html">Posters</a>
                         </div>
