--- a/EdgyEngineers.html
+++ b/EdgyEngineers.html
@@ -20,7 +20,7 @@
                         </div>
                 </div>
             </li>
-            <li class = "right"><a class="" href="index.php">LOGIN</a></li>
+            <li class = "right"><a class="" href="index.html">LOGIN</a></li>
             <li class = "right"><a class="" href="cart.html">CART</a></li>
         </div>
         <div id = "home-saying">
