--- a/errLogin.html
+++ b/errLogin.html
@@ -1,9 +1,7 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Sucess!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <header>
@@ -29,17 +27,9 @@
     </div>
 
     <div>
+        <h2>User name and password did not match.</h2>
         <br>
-        <button onclick="location.href = 'index.html';" id="myButton">Back</button>
-        <h2>Login Page</h2>
-        
-        <form action="login.php" method="POST">
-           Username: <input type="text" 
-           name="username" required="required" /> <br/><br>
-           Password: <input type="password" 
-           name="password" required="required" /> <br/><br>
-           <input type="submit" value="Login"/><br>
-        </form>
+        <button onclick="location.href = 'login.html';" id="myButton">TRY AGAIN</button>
     </div>
 
 </body>
