--- a/register.html
+++ b/register.html
@@ -1,9 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Register</title>
+    <link rel="stylesheet" href="register.php">
     <link rel="stylesheet" href="style.css">
 </head>
 <header>
@@ -31,14 +31,12 @@
     <div>
         <br>
         <button onclick="location.href = 'index.html';" id="myButton">Back</button>
-        <h2>Login Page</h2>
-        
-        <form action="login.php" method="POST">
-           Username: <input type="text" 
-           name="username" required="required" /> <br/><br>
-           Password: <input type="password" 
-           name="password" required="required" /> <br/><br>
-           <input type="submit" value="Login"/><br>
+        <h2>Registration Page</h2>
+        <form action="register.php" method="post">
+            Email: <input type="text" name="email" id="email"/> <br/><br/>
+            Create Username: <input type="text" name="username" id="username"/> <br/><br/>
+            Create password: <input type="password" name="password" id ="password"/> <br/><br/>
+            <input type="submit" value="Register"/><br/>
         </form>
     </div>
 
