--- a/cart.html
+++ b/cart.html
@@ -19,13 +19,13 @@
             <div class="dropdown">
                 <button class="dropbtn">SHOP</button>
                     <div class="dropdown-content">
-                        <a href="clothes.html">Clothes</a>
+                        <a href="clothes.php">Clothes</a>
                         <a href="acessories.html">Acessories</a>
                         <a href="poster.html">Posters</a>
                     </div>
             </div>
         </li>
-        <li class = "right"><a class="" href="login.html">LOGIN</a></li>
+        <li class = "right"><a class="" href="index.html">LOGIN</a></li>
         <li class = "right"><a class="" href="cart.html">CART</a></li>
     </div>
 
