--- a/login.html
+++ b/login.html
@@ -18,13 +18,13 @@
             <div class="dropdown">
                 <button class="dropbtn">SHOP</button>
                     <div class="dropdown-content">
-                        <a href="clothes.html">Clothes</a>
+                        <a href="clothes.php">Clothes</a>
                         <a href="acessories.html">Acessories</a>
                         <a href="poster.html">Posters</a>
                     </div>
             </div>
         </li>
-        <li class = "right"><a class="" href="login.html">LOGIN</a></li>
+        <li class = "right"><a class="" href="index.html">LOGIN</a></li>
         <li class = "right"><a class="" href="cart.html">CART</a></li>
     </div>
 
@@ -34,10 +34,8 @@
         <h2>Login Page</h2>
         
         <form action="login.php" method="POST">
-           Username: <input type="text" 
-           name="username" required="required" /> <br/><br>
-           Password: <input type="password" 
-           name="password" required="required" /> <br/><br>
+           Username: <input type="text" name="username" required="required" /> <br/><br>
+           Password: <input type="password" name="password" required="required" /> <br/><br>
            <input type="submit" value="Login"/><br>
         </form>
     </div>
