--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
         </li>
         <li class = "right"><a class="" href="index.html">LOGIN</a></li>
-        <li class = "right"><a class="" href="cart.html">CART</a></li>
+        <li class = "right"><a class="" href="checkSession.php">CART</a></li>
     </div>
 
     <div class="links">
