--- a/cart.html
+++ b/cart.html
@@ -1,33 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-    <link rel="stylesheet" href="register.php">
+<html>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="cart.css">
-</head>
-<header>
-    <h1>Edgy Engineers</h1>
-</header>
-
-<body>
-    <div class="navbar">
-        <li><a class="" href="EdgyEngineers.html">HOME</a></li>
-        <li><a class="" href="contact.html">CONTACT</a></li>
-        <li>
-            <div class="dropdown">
-                <button class="dropbtn">SHOP</button>
-                    <div class="dropdown-content">
-                        <a href="clothes.php">Clothes</a>
-                        <a href="acessories.html">Acessories</a>
-                        <a href="poster.html">Posters</a>
-                    </div>
-            </div>
-        </li>
-        <li class = "right"><a class="" href="index.html">LOGIN</a></li>
-        <li class = "right"><a class="" href="cart.html">CART</a></li>
-    </div>
+    <link rel="stylesheet" href="HomePage.css">
+    <script src = "index.js"></script>
+    <header>
+        <h1>Edgy Engineers</h1>
+    </header>
+    <body>
+        <div class="navbar">
+            <li><a class="active" href="EdgyEngineers.html">HOME</a></li>
+            <li><a class="" href="contact.html">CONTACT</a></li>
+            <li>
+                <div class="dropdown">
+                    <button class="dropbtn">SHOP</button>
+                        <div class="dropdown-content">
+                            <a href="clothes.php">Clothes</a>
+                            <a href="acessories.html">Acessories</a>
+                            <a href="poster.html">Posters</a>
+                        </div>
+                </div>
+            </li>
+            <li class = "right"><a class="" href="index.html">LOGIN</a></li>
+            <li class = "right"><a class="" href="cart.html">CART</a></li>
+        </div>
 
     <div class=”Cart-Container”></div>
 
@@ -37,14 +32,6 @@
     </div>
 
     <div class=”Cart-Items”>
-        <div class=”image-box”>
-            <img src=”images/apple.png” style={{ height=”120px” }} />
-        </div>
-        <div class=”about”>
-            <h1 class=Heading>Apple Juice</h1>
-            <h3 class=”subtitle”>250ml</h3>
-            <img src=”images/veg.png” style={{ height=”30px” }}/>
-        </div>
          <div class=”counter”></div>
         <div class=”prices”></div>
     </div>
@@ -57,11 +44,9 @@
 
     <div class=”prices”>
         <div class=”amount”>$2.99</div>
-        <div class=”save”><u>Save for later</u></div>
-        <div class=”remove”><u>Remove</u></div>
     </div>
 
-    <hr> 
+    <hr>
     <div class=”checkout”>
     <div class=”total”>
     <div>
