--- a/poster.html
+++ b/poster.html
@@ -21,7 +21,7 @@
                 </div>
             </li>
             <li class = "right"><a class="" href="index.html">LOGIN</a></li>
-            <li class = "right"><a class="" href="checkSession.php">CART</a></li>
+            <li class = "right"><a class="" href="cart.html">CART</a></li>
         </div>
         <div class="grid-container">
             <div class="grid-item">
